--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="backgroundColor">#35BAFC</color>
+    <color name="updateBtnColor">#037BAF</color>
 </resources>
